fix "add more items" spacing

--- a/web/themes/custom/cloudy/src/components/_form.scss
+++ b/web/themes/custom/cloudy/src/components/_form.scss
@@ -566,7 +566,14 @@ span.next-link .fas {
 }
 
 .webform-multiple-add {
+  align-items: center;
+  display: flex;
+  gap: spacer(4);
   margin-top: spacer(2) !important;
+
+  input[type="number"] {
+    margin-top: 0;
+  }
 }
 
 .webform-submission-form {
